--- a/function_call/function-call-based-on-openai-sdk.ipynb
+++ b/function_call/function-call-based-on-openai-sdk.ipynb
@@ -50,15 +50,15 @@
     }
    ],
    "source": [
-    "from dotenv import load_dotenv\n",
-    "load_dotenv()\n",
+    "# from dotenv import load_dotenv\n",
+    "# load_dotenv()\n",
     "\n",
     "# import os\n",
     "# os.environ['OPENAI_API_KEY'] = 'sk-123456789'\n",
     "\n",
-    "# import os\n",
-    "# from google.colab import userdata\n",
-    "# os.environ[\"OPENAI_API_KEY\"] = userdata.get('OPENAI_API_KEY')"
+    "import os\n",
+    "from google.colab import userdata\n",
+    "os.environ[\"OPENAI_API_KEY\"] = userdata.get('OPENAI_API_KEY')"
    ],
    "metadata": {
     "collapsed": false,
