--- a/function_call/function-call-based-on-openai-sdk.ipynb
+++ b/function_call/function-call-based-on-openai-sdk.ipynb
@@ -19,7 +19,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "<a href=\"https://colab.research.google.com/github/qxr777/llm-application-code/blob/master/function_call/function-call-based-on-openai-sdk.ipynb#scrollTo=9347fc9213a0b887\" target=\"_parent\">Open In Colab</a>"
+    "<a href=\"https://colab.research.google.com/github/qxr777/llm-application-code/blob/master/function_call/function-call-based-on-openai-sdk.ipynb\" target=\"_parent\">Open In Colab</a>"
    ],
    "metadata": {
     "collapsed": false
