新增基于LangChain的函数调用示例

--- a/function_call/function-call-based-on-langchain.ipynb
+++ b/function_call/function-call-based-on-langchain.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "outputs": [],
    "source": [
     "!pip install langchain-openai --upgrade --quiet"
@@ -20,35 +20,85 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T03:10:02.671810Z",
-     "start_time": "2024-03-15T03:09:58.304334Z"
+     "end_time": "2024-03-15T03:36:17.500133Z",
+     "start_time": "2024-03-15T03:36:12.648198Z"
     }
    },
    "id": "5c5c058f6e2dc05a"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/qxr777/llm-application-code/blob/master/function_call/function-call-based-on-langchain.ipynb\" target=\"_parent\">Open In Colab</a>"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6fba03f840f02ecb"
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'google.colab'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[28], line 7\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m# 三选一 加载OPENAI_API_KEY\u001B[39;00m\n\u001B[1;32m      2\u001B[0m \n\u001B[1;32m      3\u001B[0m \u001B[38;5;66;03m# import os\u001B[39;00m\n\u001B[1;32m      4\u001B[0m \u001B[38;5;66;03m# os.environ['OPENAI_API_KEY'] = 'sk-123456789'\u001B[39;00m\n\u001B[1;32m      6\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mos\u001B[39;00m\n\u001B[0;32m----> 7\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mgoogle\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mcolab\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m userdata\n\u001B[1;32m      8\u001B[0m os\u001B[38;5;241m.\u001B[39menviron[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mOPENAI_API_KEY\u001B[39m\u001B[38;5;124m\"\u001B[39m] \u001B[38;5;241m=\u001B[39m userdata\u001B[38;5;241m.\u001B[39mget(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mOPENAI_API_KEY\u001B[39m\u001B[38;5;124m'\u001B[39m)\n",
+      "\u001B[0;31mModuleNotFoundError\u001B[0m: No module named 'google.colab'"
+     ]
+    }
+   ],
+   "source": [
+    "# 三选一 加载OPENAI_API_KEY\n",
+    "\n",
+    "# 本地运行，包含.env文件\n",
+    "# from dotenv import load_dotenv\n",
+    "# load_dotenv()\n",
+    "\n",
+    "# 本地运行，不包含.env文件\n",
+    "# import os\n",
+    "# os.environ['OPENAI_API_KEY'] = 'sk-123456789'\n",
+    "\n",
+    "# google colab运行，配置secret key\n",
+    "import os\n",
+    "from google.colab import userdata\n",
+    "os.environ[\"OPENAI_API_KEY\"] = userdata.get('OPENAI_API_KEY')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-15T03:36:17.619728Z",
+     "start_time": "2024-03-15T03:36:17.584301Z"
+    }
+   },
+   "id": "e698bd119fa6fbad"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [
-    "from langchain.chat_models import ChatOpenAI\n",
     "from langchain_openai import ChatOpenAI\n",
     "from langchain.schema import HumanMessage, AIMessage, ChatMessage\n",
-    "from langchain.tools import format_tool_to_openai_function, YouTubeSearchTool\n",
+    "from langchain.tools import YouTubeSearchTool\n",
     "from langchain_core.utils.function_calling import convert_to_openai_function"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T03:10:11.687710Z",
-     "start_time": "2024-03-15T03:10:08.596180Z"
+     "end_time": "2024-03-15T03:36:17.664605Z",
+     "start_time": "2024-03-15T03:36:17.634179Z"
     }
    },
    "id": "ade5715506481fcd"
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "model = 'gpt-3.5-turbo-0613'\n",
@@ -57,8 +107,7 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T03:10:16.087409Z",
-     "start_time": "2024-03-15T03:10:14.684488Z"
+     "start_time": "2024-03-15T03:36:17.651517Z"
     }
    },
    "id": "b9662d1c4ce970e3"
@@ -85,17 +134,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "[{'name': 'youtube_search',\n  'description': 'search for youtube videos associated with a person. the input to this tool should be a comma separated list, the first part contains a person name and the second a number that is the maximum number of video results to return aka num_results. the second part is optional',\n  'parameters': {'properties': {'__arg1': {'title': '__arg1',\n     'type': 'string'}},\n   'required': ['__arg1'],\n   'type': 'object'}}]"
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "tools = [YouTubeSearchTool()]\n",
     "functions = [convert_to_openai_function(t) for t in tools]\n",
@@ -104,25 +144,16 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T03:11:56.949791Z",
-     "start_time": "2024-03-15T03:11:56.930250Z"
+     "end_time": "2024-03-15T03:36:17.802983Z",
+     "start_time": "2024-03-15T03:36:17.666155Z"
     }
    },
    "id": "bd6c1841299cc235"
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "AIMessage(content='', additional_kwargs={'function_call': {'arguments': '{\\n  \"arg1\": \"OpenAI\"\\n}', 'name': 'youtube_search'}}, response_metadata={'finish_reason': 'function_call', 'logprobs': None})"
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "message = llm.invoke([HumanMessage(content='search videos in the topic of OpenAI on Youtube')], functions=functions)\n",
     "message"
@@ -130,8 +161,7 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T03:11:59.236665Z",
-     "start_time": "2024-03-15T03:11:58.138865Z"
+     "start_time": "2024-03-15T03:36:17.674832Z"
     }
    },
    "id": "53bee6bd758eb4e2"
@@ -148,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "function_descriptions = [\n",
@@ -199,15 +229,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T03:12:25.672648Z",
-     "start_time": "2024-03-15T03:12:25.648872Z"
+     "start_time": "2024-03-15T03:36:17.689206Z"
     }
    },
    "id": "d9f68a8e76dcd56f"
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "question = \"\"\"\n",
@@ -223,15 +252,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T03:12:33.051664Z",
-     "start_time": "2024-03-15T03:12:33.026071Z"
+     "start_time": "2024-03-15T03:36:17.698551Z"
     }
    },
    "id": "a22315440ab812da"
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "import inspect\n",
@@ -246,15 +274,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T03:12:36.504982Z",
-     "start_time": "2024-03-15T03:12:36.475921Z"
+     "start_time": "2024-03-15T03:36:17.706767Z"
     }
    },
    "id": "9ecb63fb0778b269"
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "def remove_word_from_string(string, index):\n",
@@ -274,25 +301,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T03:12:38.406076Z",
-     "start_time": "2024-03-15T03:12:38.387441Z"
+     "start_time": "2024-03-15T03:36:17.715338Z"
     }
    },
    "id": "b193bfb5330fa2c8"
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "AIMessage(content='', additional_kwargs={'function_call': {'arguments': '{\\n\"string\": \"black yellow red blue green\",\\n\"index\": 2\\n}', 'name': 'remove_word_from_string'}}, response_metadata={'finish_reason': 'function_call', 'logprobs': None})"
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "first_response = llm.invoke([HumanMessage(content=question)], functions=function_descriptions)\n",
     "first_response"
@@ -300,15 +317,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T03:12:44.718166Z",
-     "start_time": "2024-03-15T03:12:43.320780Z"
+     "start_time": "2024-03-15T03:36:17.722777Z"
     }
    },
    "id": "7d8f1593a9d1124a"
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# Get function name, and its arguments\n",
@@ -327,25 +343,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T03:21:19.318537Z",
-     "start_time": "2024-03-15T03:21:19.293699Z"
+     "start_time": "2024-03-15T03:36:17.726663Z"
     }
    },
    "id": "1b2510d1e37df5c8"
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'black yellow blue green'"
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "returned_value = the_function(*parameter_values)\n",
     "returned_value"
@@ -353,25 +359,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T03:22:54.394236Z",
-     "start_time": "2024-03-15T03:22:54.337696Z"
+     "start_time": "2024-03-15T03:36:17.733187Z"
     }
    },
    "id": "2ad5903fbfb0126"
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "AIMessage(content='The updated string after removing the third word is: \"black yellow blue green\".\\n\\nNow, I will send the updated string to Alex via email.', additional_kwargs={'function_call': {'arguments': '{\\n  \"recipient\": \"alex@xyz.com\",\\n  \"message\": \"black yellow blue green\"\\n}', 'name': 'send_message_by_email'}}, response_metadata={'finish_reason': 'function_call', 'logprobs': None})"
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "second_response = llm.invoke(\n",
     "    [\n",
@@ -390,32 +386,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T03:26:57.457024Z",
-     "start_time": "2024-03-15T03:26:55.841134Z"
+     "start_time": "2024-03-15T03:36:17.738049Z"
     }
    },
    "id": "38e57a0b05001e1c"
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sending black yellow blue green to alex@xyz.com\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "'Just sent email to alex@xyz.com'"
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# Again get function name, and its arguments\n",
     "\n",
@@ -435,25 +414,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T03:29:33.640524Z",
-     "start_time": "2024-03-15T03:29:33.597948Z"
+     "start_time": "2024-03-15T03:36:17.740595Z"
     }
    },
    "id": "589d0eefbde7a441"
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "AIMessage(content='I have removed the third word from the string and sent the updated string to Alex via email.', response_metadata={'finish_reason': 'stop', 'logprobs': None})"
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "third_response = llm.predict_messages(\n",
     "    [\n",
@@ -472,8 +441,7 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T03:30:18.094695Z",
-     "start_time": "2024-03-15T03:30:16.801250Z"
+     "start_time": "2024-03-15T03:36:17.744151Z"
     }
    },
    "id": "7703354b4fa031f9"
@@ -484,7 +452,10 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2024-03-15T03:36:17.749485Z"
+    }
    },
    "id": "c972dd7a7eaefa8c"
   }
