新增基于LangChain的函数调用示例

--- a/function_call/function-call-based-on-langchain.ipynb
+++ b/function_call/function-call-based-on-langchain.ipynb
@@ -12,16 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "outputs": [],
    "source": [
-    "!pip install langchain-openai --upgrade --quiet"
+    "!pip install langchain openai --upgrade --quiet"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T03:36:17.500133Z",
-     "start_time": "2024-03-15T03:36:12.648198Z"
+     "end_time": "2024-03-15T03:43:31.609883Z",
+     "start_time": "2024-03-15T03:43:24.512023Z"
     }
    },
    "id": "5c5c058f6e2dc05a"
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "outputs": [
     {
      "ename": "ModuleNotFoundError",
@@ -47,7 +47,7 @@
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[0;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[28], line 7\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m# 三选一 加载OPENAI_API_KEY\u001B[39;00m\n\u001B[1;32m      2\u001B[0m \n\u001B[1;32m      3\u001B[0m \u001B[38;5;66;03m# import os\u001B[39;00m\n\u001B[1;32m      4\u001B[0m \u001B[38;5;66;03m# os.environ['OPENAI_API_KEY'] = 'sk-123456789'\u001B[39;00m\n\u001B[1;32m      6\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mos\u001B[39;00m\n\u001B[0;32m----> 7\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mgoogle\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mcolab\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m userdata\n\u001B[1;32m      8\u001B[0m os\u001B[38;5;241m.\u001B[39menviron[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mOPENAI_API_KEY\u001B[39m\u001B[38;5;124m\"\u001B[39m] \u001B[38;5;241m=\u001B[39m userdata\u001B[38;5;241m.\u001B[39mget(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mOPENAI_API_KEY\u001B[39m\u001B[38;5;124m'\u001B[39m)\n",
+      "Cell \u001B[0;32mIn[31], line 13\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m# 三选一 加载OPENAI_API_KEY\u001B[39;00m\n\u001B[1;32m      2\u001B[0m \n\u001B[1;32m      3\u001B[0m \u001B[38;5;66;03m# 本地运行，包含.env文件\u001B[39;00m\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m     10\u001B[0m \n\u001B[1;32m     11\u001B[0m \u001B[38;5;66;03m# google colab运行，配置secret key\u001B[39;00m\n\u001B[1;32m     12\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mos\u001B[39;00m\n\u001B[0;32m---> 13\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mgoogle\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mcolab\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m userdata\n\u001B[1;32m     14\u001B[0m os\u001B[38;5;241m.\u001B[39menviron[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mOPENAI_API_KEY\u001B[39m\u001B[38;5;124m\"\u001B[39m] \u001B[38;5;241m=\u001B[39m userdata\u001B[38;5;241m.\u001B[39mget(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mOPENAI_API_KEY\u001B[39m\u001B[38;5;124m'\u001B[39m)\n",
       "\u001B[0;31mModuleNotFoundError\u001B[0m: No module named 'google.colab'"
      ]
     }
@@ -71,15 +71,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T03:36:17.619728Z",
-     "start_time": "2024-03-15T03:36:17.584301Z"
+     "end_time": "2024-03-15T03:43:50.157003Z",
+     "start_time": "2024-03-15T03:43:49.712273Z"
     }
    },
    "id": "e698bd119fa6fbad"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "outputs": [],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
@@ -90,8 +90,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T03:36:17.664605Z",
-     "start_time": "2024-03-15T03:36:17.634179Z"
+     "end_time": "2024-03-15T03:42:22.515001Z",
+     "start_time": "2024-03-15T03:42:22.469488Z"
     }
    },
    "id": "ade5715506481fcd"
