新增基于LangChain的函数调用示例

--- a/function_call/function-call-based-on-langchain.ipynb
+++ b/function_call/function-call-based-on-langchain.ipynb
@@ -63,7 +63,7 @@
     "# import os\n",
     "# os.environ['OPENAI_API_KEY'] = 'sk-123456789'\n",
     "\n",
-    "# google colab运行，配置secret key\n",
+    "# google colab运行，需要配置secret key\n",
     "import os\n",
     "from google.colab import userdata\n",
     "os.environ[\"OPENAI_API_KEY\"] = userdata.get('OPENAI_API_KEY')"
@@ -125,7 +125,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### 直接调用LangChain提供的工具"
+    "### 示例一：调用LangChain提供的工具"
    ],
    "metadata": {
     "collapsed": false
@@ -169,7 +169,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### 调用自定义的工具"
+    "### 示例二：调用自定义的工具"
    ],
    "metadata": {
     "collapsed": false
@@ -265,11 +265,22 @@
     "import inspect\n",
     "\n",
     "def get_function_parameter_names(function):\n",
-    "  if function is not None and inspect.isfunction(function):\n",
-    "      parameter_names = inspect.signature(function).parameters.keys()\n",
-    "      return list(parameter_names)\n",
-    "  else:\n",
-    "      return None"
+    "    \"\"\"\n",
+    "    获取指定函数的参数名列表。\n",
+    "    \n",
+    "    参数:\n",
+    "    function - 需要获取参数名的函数对象。\n",
+    "    \n",
+    "    返回值:\n",
+    "    如果函数参数有效，则返回一个包含所有参数名的列表；否则返回None。\n",
+    "    \"\"\"\n",
+    "    if function is not None and inspect.isfunction(function):\n",
+    "        # 如果传入的对象是函数，获取其参数名\n",
+    "        parameter_names = inspect.signature(function).parameters.keys()\n",
+    "        return list(parameter_names)\n",
+    "    else:\n",
+    "        # 如果传入的对象不是函数，返回None\n",
+    "        return None\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -338,7 +349,10 @@
     "parameter_names = get_function_parameter_names(the_function)\n",
     "parameter_values = []\n",
     "for parameter_name in parameter_names:\n",
-    "    parameter_values.append(arguments[parameter_name])"
+    "    parameter_values.append(arguments[parameter_name])\n",
+    "\n",
+    "returned_value = the_function(*parameter_values)\n",
+    "returned_value"
    ],
    "metadata": {
     "collapsed": false,
@@ -347,22 +361,6 @@
     }
    },
    "id": "1b2510d1e37df5c8"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "returned_value = the_function(*parameter_values)\n",
-    "returned_value"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2024-03-15T03:36:17.733187Z"
-    }
-   },
-   "id": "2ad5903fbfb0126"
   },
   {
    "cell_type": "code",
