新增基于LangChain的函数调用示例

--- a/function_call/function-call-based-on-langchain.ipynb
+++ b/function_call/function-call-based-on-langchain.ipynb
@@ -422,7 +422,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "third_response = llm.predict_messages(\n",
+    "third_response = llm.invoke(\n",
     "    [\n",
     "        HumanMessage(content=question),\n",
     "        AIMessage(content=str(first_response.additional_kwargs)),\n",
