新增csv增强示例

--- a/retrieval_augmented_generation/augmented-by-csv.ipynb
+++ b/retrieval_augmented_generation/augmented-by-csv.ipynb
@@ -3,12 +3,51 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "initial_id",
+   "id": "68ec9a8770811c76",
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "!pip install langchain openai --upgrade --quiet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<a href = \"https://colab.research.google.com/github/qxr777/llm-application-code/blob/master/function_call/function-call-based-on-langchain.ipynb\"\n",
+    "target = \"_parent\"> Open In Colab </a>"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c7f20d6a3ccf99cb"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# 三选一 加载OPENAI_API_KEY\n",
+    "\n",
+    "# 本地运行，包含.env文件\n",
+    "# from dotenv import load_dotenv\n",
+    "# load_dotenv()\n",
+    "\n",
+    "# 本地运行，不包含.env文件\n",
+    "# import os\n",
+    "# os.environ['OPENAI_API_KEY'] = 'sk-123456789'\n",
+    "\n",
+    "# google colab运行，需要配置secret key\n",
+    "import os\n",
+    "from google.colab import userdata\n",
+    "\n",
+    "os.environ[\"OPENAI_API_KEY\"] = userdata.get('OPENAI_API_KEY')"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "initial_id"
   },
   {
    "cell_type": "code",
