新增csv增强示例

--- a/retrieval_augmented_generation/augmented-by-csv.ipynb
+++ b/retrieval_augmented_generation/augmented-by-csv.ipynb
@@ -2,14 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "68ec9a8770811c76",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2024-03-15T10:02:22.141893Z",
+     "start_time": "2024-03-15T10:01:06.790755Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/pty.py:89: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
+      "  pid, fd = os.forkpty()\n"
+     ]
+    }
+   ],
    "source": [
-    "!pip install langchain openai --upgrade --quiet"
+    "!pip install langchain openai --upgrade --quiet\n",
+    "!pip install langchain[docarray] --upgrade --quiet"
    ]
   },
   {
@@ -51,14 +65,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "outputs": [
     {
      "data": {
       "text/plain": "                                                name  \\\n0                           Women's Campside Oxfords   \n1           Recycled Waterhog Dog Mat, Chevron Weave   \n2  Infant and Toddler Girls' Coastal Chill Swimsu...   \n3         Refresh Swimwear, V-Neck Tankini Contrasts   \n4                             EcoFlex 3L Storm Pants   \n\n                                         description  \n0  This ultracomfortable lace-to-toe Oxford boast...  \n1  Protect your floors from spills and splashing ...  \n2  She'll love the bright colors, ruffles and exc...  \n3  Whether you're going for a swim or heading out...  \n4  Our new TEK O2 technology makes our four-seaso...  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>description</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Women's Campside Oxfords</td>\n      <td>This ultracomfortable lace-to-toe Oxford boast...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Recycled Waterhog Dog Mat, Chevron Weave</td>\n      <td>Protect your floors from spills and splashing ...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Infant and Toddler Girls' Coastal Chill Swimsu...</td>\n      <td>She'll love the bright colors, ruffles and exc...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Refresh Swimwear, V-Neck Tankini Contrasts</td>\n      <td>Whether you're going for a swim or heading out...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>EcoFlex 3L Storm Pants</td>\n      <td>Our new TEK O2 technology makes our four-seaso...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 2,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,29 +97,16 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T07:32:18.435125Z",
-     "start_time": "2024-03-15T07:32:18.342070Z"
+     "end_time": "2024-03-15T10:02:34.285297Z",
+     "start_time": "2024-03-15T10:02:34.229728Z"
     }
    },
    "id": "3559e9f3c84e26cc"
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/langchain_core/_api/deprecation.py:117: LangChainDeprecationWarning: The class `langchain_community.embeddings.openai.OpenAIEmbeddings` was deprecated in langchain-community 0.0.9 and will be removed in 0.2.0. An updated version of the class exists in the langchain-openai package and should be used instead. To use it run `pip install -U langchain-openai` and import as `from langchain_openai import OpenAIEmbeddings`.\n",
-      "  warn_deprecated(\n",
-      "2024-03-15 15:32:57.068572: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/pydantic/_migration.py:283: UserWarning: `pydantic.error_wrappers:ValidationError` has been moved to `pydantic:ValidationError`.\n",
-      "  warnings.warn(f'`{import_path}` has been moved to `{new_location}`.')\n"
-     ]
-    }
-   ],
+   "execution_count": 27,
+   "outputs": [],
    "source": [
     "#导入向量存储索引创建器\n",
     "from langchain.indexes import VectorstoreIndexCreator \n",
@@ -116,8 +117,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T07:33:37.632886Z",
-     "start_time": "2024-03-15T07:32:44.285133Z"
+     "end_time": "2024-03-15T10:03:00.623400Z",
+     "start_time": "2024-03-15T10:02:36.268254Z"
     }
    },
    "id": "20c752309b436b83"
